Edit chocolatechipcookies.html; add brownies.html

--- a/recipes/chocolatechipcookies.html
+++ b/recipes/chocolatechipcookies.html
@@ -6,7 +6,34 @@
     </head>
     <body>
         <p><a href="../index.html">Home</a></p>
-        <h1>Chocolate Chips Cookies</h1>
-        
+        <h1>Chocolate Chip Cookies</h1>
+             <img src="../photos/choc-chip-cookie.JPG" alt="blurry photo of chocolate chip cookies fresh on the pan" height =200>
+             <h2>Description</h2>
+                <p>This recipe has been mysteriously passed down from my Aunt Natalie, who has no recolletion of it or its distribution. However, the recipe card attributes it to her, and we will <strong>not</strong> disparage its integrity. I've halved the original, becuase the one time I tried to make a full batch the mass of dough began to warp my Bosch mixer.</p>
+                <p>They taste like normal chocolate chip cookies, no special ingredients, but it must nail the proportions or something becuase people <em>love</em> them. In high school, these and desperate hope made up my plan for making friends.</p>
+            <h2>Ingredients</h2>
+                <ul>
+                    <li>2 Eggs</li>
+                    <li>1 Cup Butter</li>
+                    <li>1 Cup Brown Sugar</li>
+                    <li>1 1/4 Cups Sugar</li>
+                    <li>3/4 tsp Baking Soda</li>
+                    <li>3/4 tsp Baking Powder</li>
+                    <li>3/4 tsp Salt</li>
+                    <li>1 1/2 tsp Vanilla</li>
+                    <li>3 Cups Flour</li>
+                    <li>1 Cup Choclate Chips</li>
+                </ul>
+            <h2>Steps</h2>
+                <ol>
+                    <li>Preheat oven to 375F.</li>
+                    <li>Beat eggs for 2-4 minutes.</li>
+                    <li>Add butter, brown sugar, and sugar and mix until creamy.</li>
+                    <li>Add dry ingredients and mix until almost combined.</li>
+                    <li>Fold in chocolate chips.</li>
+                    <li>Use common sense to distribute dough on baking pans.</li>
+                    <li>Bake @375 for 11 minutes.</li>
+                    <li>Let cool on the pan for a few minutes to solidify before transferring to cooling rack.</li>
+                </ol>
     </body>
 </html>
