--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/chocolatechipcookies.html">Chocolate Chip Cookies</a></li>
             <li><a href="recipes/brownies.html">Brownies</a></li>
+            <li><a href="recipes/tomatosoup.html">Tomato Soup</a></li>
         </ul>
         
     </body>
