Add style.css and slight changes

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -2,17 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTf-8">
-        <title>Odin Recipes</title>
+        <link rel="stylesheet" href="../style.css">
+
+        <title>Odin Recipes - Brownies</title>
     </head>
     <body>
-        <p><a href="../index.html">Home</a></p>
+        <button class="home-button"><a class="home-button"href="../index.html">Home</a></button>
+        <h1>Odin Recipes:</h1>
         <h1>Brownies</h1>
-             <img src="../photos/brownies.JPG" alt="blurry photo of chocolate chip cookies fresh on the pan" height =300>
-             <h2>Description</h2>
-                <p>Apprently swindled from our Junior High lunchlady, the original recipe was labeled only as "US", presumably to indicate American measurements.</p>
-                <p>You can customize your desire texture (fudgy or caky) simply by baking for less or more time respectively.</p>
-            <h2>Ingredients</h2>
-                <ul>
+             <img src="../photos/brownies.JPG" alt="photo of 2 1/2 brownie pieces in an open tupperware" height =300>
+             <h2 class="description">Description</h2>
+                <p class="description">Apparently swindled from our junior high lunchlady, the original recipe was labeled only as "US", presumably to indicate American measurements. You can customize your desire texture (fudgy or caky) simply by baking for less or more time respectively.</p>
+               
+                <h2>Ingredients</h2>
+                 <ul>
                     <li>1 Cup Vegetable Oil</li>
                     <li>2 Cups Sugar</li>
                     <li>2 tsps Vanilla</li>
@@ -34,4 +37,8 @@
                     <li>Cool completely before cutting.</li>
                 </ol>
     </body>
+  <footer>
+        
+
+    </footer>
 </html>
