--- a/recipes/chocolatechipcookies.html
+++ b/recipes/chocolatechipcookies.html
@@ -2,15 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTf-8">
+        <link rel="stylesheet" href="../style.css">
         <title>Odin Recipes</title>
     </head>
     <body>
-        <p><a href="../index.html">Home</a></p>
+        <button class="home-button"><a class="home-button"href="../index.html">Home</a></button>
+        <h1>Odin Recipes:</h1>
         <h1>Chocolate Chip Cookies</h1>
              <img src="../photos/choc-chip-cookie.JPG" alt="blurry photo of chocolate chip cookies fresh on the pan" height =200>
-             <h2>Description</h2>
-                <p>This recipe has been mysteriously passed down from my Aunt Natalie, who has no recolletion of it or its distribution. However, the recipe card attributes it to her, and we will <strong>not</strong> disparage its integrity. I've halved the original, becuase the one time I tried to make a full batch the mass of dough began to warp my Bosch mixer.</p>
-                <p>They taste like normal chocolate chip cookies, no special ingredients, but it must nail the proportions or something becuase people <em>love</em> them. In high school, these and desperate hope made up my plan for making friends.</p>
+             <h2 class="description">Description</h2>
+                <p class="description">This recipe has been mysteriously passed down from my Aunt Natalie, who has no recolletion of it or its distribution. However, the recipe card attributes it to her, and we will <strong>not</strong> disparage its integrity. I've halved the original, becuase the one time I tried to make a full batch the mass of dough began to warp my Bosch mixer.</p>
+                <p class="description">They taste like normal chocolate chip cookies, no special ingredients, but it must nail the proportions or something becuase people <em>love</em> them. In high school, these and desperate hope made up my plan for making friends.</p>
             <h2>Ingredients</h2>
                 <ul>
                     <li>2 Eggs</li>
@@ -36,4 +38,8 @@
                     <li>Let cool on the pan for a few minutes to solidify before transferring to cooling rack.</li>
                 </ol>
     </body>
+ <footer>
+        
+
+ </footer>
 </html>
