--- a/recipes/tomatosoup.html
+++ b/recipes/tomatosoup.html
@@ -2,16 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="UTf-8">
+        <link rel="stylesheet" href="../style.css">
+
         <title>Odin Recipes</title>
     </head>
     <body>
-        <p><a href="../index.html">Home</a></p>
+       <button class="home-button"><a class="home-button"href="../index.html">Home</a></button>
+        <h1>Odin Recipes:</h1>
         <h1>Tomato Soup</h1>
              <img src="../photos/tomato-soup.JPG" alt="illustration on the original recipe with calculations for doubling/tripling the recipe all around" height =300>
-             <h2>Description</h2>
-                <p>This soup is from a recipe book for kids, purportedly with three or less ingredients and steps. They do not count water as an ingredient. </p>
-                <p>Careful not to add too much honey, otherwise it's just unpleasant. You want savory! Unless you're looking for a sweet soup, then do whatever.</p>
-                <p>Produces one serving.</p>
+             <h2 class="description">Description</h2>
+                <p class="description">This soup is from a recipe book for kids, purportedly with three or less ingredients and steps. They do not count water as an ingredient. </p>
+                <p class="description">Careful not to add too much honey, otherwise it's just unpleasant. You want savory! Unless you're looking for a sweet soup, then do whatever.</p>
+                <p class="description">Produces one serving.</p>
             <h2>Ingredients</h2>
                 <ul>
                     <li>2/3 cup Tomato Sauce</li>
@@ -25,4 +28,8 @@
                     <li>When nice and hot, pour into a mug. Let cool a bit and drink away. (Or use a spoon.)</li>
                 </ol>
     </body>
+ <footer>
+        
+
+</footer>
 </html>
