--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="UTf-8">
-        <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
+        <title>Odin Recipes - Home</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/chocolatechipcookies.html">Chocolate Chip Cookies</a></li>
-            <li><a href="recipes/brownies.html">Brownies</a></li>
-            <li><a href="recipes/tomatosoup.html">Tomato Soup</a></li>
-        </ul>
+        <p class="description">This website is intended to serve both as a development project and a repository of recipes. I hope you enjoy browsing my collection of classic recipes!</p>
+            <h2>Recipe List:</h2>
+            <ul class="list-of-recipes">
+                <li><a href="recipes/chocolatechipcookies.html">Chocolate Chip Cookies</a></li>
+                <li><a href="recipes/brownies.html">Brownies</a></li>
+                <li><a href="recipes/tomatosoup.html">Tomato Soup</a></li>
+            </ul>
         
     </body>
+    <footer>
+        
+
+    </footer>
 </html>
